# mrigtl_lib

./: CMakeLists.txt  LICENSE  README.md  Usemrigtl_lib.cmake.in  Usemrigtlbridge_cpp.cmake.in  build.sh
cmake/: generate_mrigtl_lib_config.cmake  generate_mrigtlbridge_cpp_config.cmake  mrigtl_libConfig.cmake.in  mrigtlbridge_cppConfig.cmake.in
include/: common.h  igtl_listener.h  igtl_widget.h  listener_base.h  mr_igtl_bridge_window.h  mrigtl_lib_export.h  mrsim_listener.h  mrsim_widget.h  signal_manager.h  signal_wrap.h  widget_base.h
src/: common.cpp  igtl_listener.cpp  igtl_widget.cpp  listener_base.cpp  main.cpp  mr_igtl_bridge_window.cpp  mrsim_listener.cpp  mrsim_widget.cpp  signal_manager.cpp  widget_base.cpp
